--- a/references.bib
+++ b/references.bib
@@ -8,11 +8,22 @@
 	year={2017}
 }
 
-@article{conneau2017word,
-	title={Word translation without parallel data},
-	author={Conneau, Alexis and Lample, Guillaume and Ranzato, Marc'Aurelio and Denoyer, Ludovic and J{\'e}gou, Herv{\'e}},
-	journal={arXiv preprint arXiv:1710.04087},
-	year={2017}
+@article{DBLP:journals/corr/abs-1710-04087,
+	author    = {Alexis Conneau and
+	Guillaume Lample and
+	Marc'Aurelio Ranzato and
+	Ludovic Denoyer and
+	Herv{\'{e}} J{\'{e}}gou},
+	title     = {Word Translation Without Parallel Data},
+	journal   = {CoRR},
+	volume    = {abs/1710.04087},
+	year      = {2017},
+	url       = {http://arxiv.org/abs/1710.04087},
+	archivePrefix = {arXiv},
+	eprint    = {1710.04087},
+	timestamp = {Mon, 13 Aug 2018 16:48:22 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1710-04087},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{hoshen2018tive,
@@ -76,11 +87,20 @@
 	year={2015}
 }
 
-@article{bahdanau2014neural,
-	title={Neural machine translation by jointly learning to align and translate},
-	author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
-	journal={arXiv preprint arXiv:1409.0473},
-	year={2014}
+@article{DBLP:journals/corr/BahdanauCB14,
+	author    = {Dzmitry Bahdanau and
+	Kyunghyun Cho and
+	Yoshua Bengio},
+	title     = {Neural Machine Translation by Jointly Learning to Align and Translate},
+	journal   = {CoRR},
+	volume    = {abs/1409.0473},
+	year      = {2014},
+	url       = {http://arxiv.org/abs/1409.0473},
+	archivePrefix = {arXiv},
+	eprint    = {1409.0473},
+	timestamp = {Mon, 13 Aug 2018 16:46:05 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/BahdanauCB14},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{artetxe2018robust,
@@ -110,11 +130,21 @@
 }
 
 
-@article{bojanowski2016enriching,
-	title={Enriching word vectors with subword information},
-	author={Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
-	journal={arXiv preprint arXiv:1607.04606},
-	year={2016}
+@article{DBLP:journals/corr/BojanowskiGJM16,
+	author    = {Piotr Bojanowski and
+	Edouard Grave and
+	Armand Joulin and
+	Tomas Mikolov},
+	title     = {Enriching Word Vectors with Subword Information},
+	journal   = {CoRR},
+	volume    = {abs/1607.04606},
+	year      = {2016},
+	url       = {http://arxiv.org/abs/1607.04606},
+	archivePrefix = {arXiv},
+	eprint    = {1607.04606},
+	timestamp = {Mon, 13 Aug 2018 16:46:11 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/BojanowskiGJM16},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{ruder2017survey,
@@ -238,11 +268,24 @@
 	author={Vulic, Ivan and Korhonen, Anna-Leena},
 	year={2016}
 }
-@article{cheng2016semi,
-	title={Semi-supervised learning for neural machine translation},
-	author={Cheng, Yong and Xu, Wei and He, Zhongjun and He, Wei and Wu, Hua and Sun, Maosong and Liu, Yang},
-	journal={arXiv preprint arXiv:1606.04596},
-	year={2016}
+@article{DBLP:journals/corr/ChengXHHWSL16,
+	author    = {Yong Cheng and
+	Wei Xu and
+	Zhongjun He and
+	Wei He and
+	Hua Wu and
+	Maosong Sun and
+	Yang Liu},
+	title     = {Semi-Supervised Learning for Neural Machine Translation},
+	journal   = {CoRR},
+	volume    = {abs/1606.04596},
+	year      = {2016},
+	url       = {http://arxiv.org/abs/1606.04596},
+	archivePrefix = {arXiv},
+	eprint    = {1606.04596},
+	timestamp = {Mon, 13 Aug 2018 16:47:49 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/ChengXHHWSL16},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{vaswani2017attention,
 	title={Attention is all you need},
@@ -449,4 +492,12 @@
 	author={Sennrich, Rico and Haddow, Barry and Birch, Alexandra},
 	journal={arXiv preprint arXiv:1508.07909},
 	year={2015}
+}
+
+@inproceedings{cao2016distribution,
+	title={A distribution-based model to learn bilingual word embeddings},
+	author={Cao, Hailong and Zhao, Tiejun and Zhang, Shu and Meng, Yao},
+	booktitle={Proceedings of COLING 2016, the 26th International Conference on Computational Linguistics: Technical Papers},
+	pages={1818--1827},
+	year={2016}
 }
