--- a/wordembedding.tex
+++ b/wordembedding.tex
@@ -31,7 +31,7 @@ The normalization over $V_e$ is very expensive since it is calculate for all wor
 \[p(e_{i+d}|e_i) = \log p(e_{i+d}=1| e_i) + \frac{1}{k} \sum_{e^{\prime} \in p_{\text{noise}}}\log p(e^{\prime}=0|e_i)\]
 where $p(\cdot| e_i)$ is a model to predict if the word is in the context of $e_i$.\\ 
 \textbf{Subword Information}\\
-The training methods mentioned treat each word as a distinct word embedding, however, intuitively we can obtain more information from the morphological information of words. A subword model is proposed to capture the subword informaion. The training network is still CBOW or skip-gram. Each word is represented as a bag of character-level $n$-grams and assign a distinct embedding for each character $n$-gram. Score function in the network is calculated using the sum of inner products of the subword embeddings. 
+The training methods mentioned treat each word as a distinct word embedding, however, intuitively we can obtain more information from the morphological information of words. A subword model is proposed to capture the subword informaion. The training network is still CBOW or skip-gram. Each word is represented as a bag of character-level $n$-grams and assign a distinct embedding for each character $n$-gram. Score function in the network is calculated using the sum of inner products of the subword embeddings (\cite{DBLP:journals/corr/BojanowskiGJM16}). 
 \subsection{GloVe}
 Global vectors(GloVe) allows us to learn word representations via matrix factorization. GloVe minimizes the difference between the dot product of the embeddings of word and its context and the logarithm of their number of co-occurrences within a certain window size:
 \[ \mathcal{L}_{GloVe}^e = \sum_{i,j=1}^{\lvert V_e \rvert} f(C_{ij})({\bm{e}_i}^{\top} \bm{e}_j - \log{C_{ij}} ) \]
