--- a/experiments.tex
+++ b/experiments.tex
@@ -38,20 +38,20 @@ In this chapter, we present experimental results of our proposed methods: corpus
 \end{table}
 
 \section{Experimental Setup}
-We train monoligual word embeddings with a dimensionality of 300 using FastText (\cite{bojanowski2016enriching}) for 5 epochs, only for words that have occurs at least 10 times. Our corpus-based approach is also implemented on MUSE framework (\cite{conneau2017word}). Vocabulary sizes for source and target side are limited to 50k.
+We train monoligual word embeddings with a dimensionality of 300 using FastText (\cite{DBLP:journals/corr/BojanowskiGJM16}) for 5 epochs, only for words that have occurs at least 10 times. Our corpus-based approach is also implemented on MUSE framework (\cite{DBLP:journals/corr/abs-1710-04087}). Vocabulary sizes for source and target side are limited to 50k.
 $5$-gram LMs are trained separately using KenLM with Kneser–Ney smoothing (\cite{heafield2011kenlm}).\\
 LM supported context-aware beam search is performed among top 100 word translation candidates for each position with beam size 10.\\
 DAE is implemented in Sockeye (\cite{hieber2017sockeye}), using RNN and Transformer architectures. RNN-based DAE has 2-layer encoder and 2-layer decoder, the hidden layer size is 512. In Transfomer based DAE, encoder and decoder both have 6 layers and hidden layer size is also 512. The multi-head attention mechanism uses 6 heads. DAEs are trained on smaller monolingual corpora containing 20M sentences. \\
-We evaluate different cross-lingual embedding learning methods on cross-lingual word retrieval tasks. The datasets are released by \cite{conneau2017word}, which contains dictionaries for 12 language pairs. Each test dictionary contains 1500 unique source words for evaluation.  
+We evaluate different cross-lingual embedding learning methods on cross-lingual word retrieval tasks. The datasets are released by \cite{}, which contains dictionaries for 12 language pairs. Each test dictionary contains 1500 unique source words for evaluation.  
 \section{Word Translation}
-We conduct the cross-lingual word retrieval task on English$\leftrightarrow$German pair. Empirically, we find the best sentence batch size is 1k and the best initial lr is $0.0001$. Numbers in Table 6.3 are the accuracy (\%) of results, with the same sentence batch size and initial lr. The last three rows are the baseline experiments: adversarial training, adversarial training with refinement, and supervised learning. Dictionary with 5000 unique source words are provided for supervised learning. We run the novel corpus-based approach on a relative small corpus with 50k sentences, just top 50k sentences from the training corpus using different lr schedulers. The first one is to start from initial lr, the second one is to inherit the lr after the training on previous batch sentences. The first lr scheduler always performs better than the second one. We demonstrate the results for German$\rightarrow$ English and English $\rightarrow$ German with the first scheduler, also the performance of  German$\rightarrow$ English with second scheduler. In order to lift the performance of the second scheduler, we augment corpus by training over the 50k corpus for two epochs and extend the corpus size to 200k. The results get better but still not as good as first lr scheduler. Results are in Table 6.4. Figure 6.1 demonstrates retrieval accuracy curve w.r.t the number of training batches.
+We conduct the cross-lingual word retrieval task on English$\leftrightarrow$German pair. Empirically, we find the best sentence batch size is 1k and the best initial lr is $0.0001$. Numbers in Table 6.3 are the accuracy results, with the same sentence batch size and initial lr. The last three rows are the baseline experiments: adversarial training, adversarial training with refinement, and supervised learning. Dictionary with 5000 unique source words are provided for supervised learning. We run the novel corpus-based approach on a relative small corpus with 50k sentences, sampled from the training corpus. We implement  different lr schedulers. The first one is to start from initial lr, the second one is to inherit the lr after the training on previous batch sentences. We demonstrate the results for German$\rightarrow$ English and English $\rightarrow$ German with the first scheduler, also the performance of  German$\rightarrow$ English with second scheduler.
 
 \begin{table}[H]
 	\centering
 	\begin{tabular}{llcc}
 		\hline
-		&                & De-En & En-De            \\ \hline
-		\multirow{2}{*}{Corpus-based } & lr scheduler 1 & 60.37 & 60.57            \\ \cline{2-4} 
+		&                & De-En [\%]& En-De [\%]            \\ \hline
+		\multirow{2}{*}{Corpus-based } & lr scheduler 1 & 60.37 & 60.67            \\ \cline{2-4} 
 		& lr scheduler 2 & 51.50 & \textbackslash{} \\ \hline
 		Corpus-based without LM              & lr scheduler 1 & 54.36 &        \textbackslash{}           \\ \hline
 		Adversarial                            &                & 53.50 &       \textbackslash{}   \\ \hline
@@ -63,24 +63,28 @@ We conduct the cross-lingual word retrieval task on English$\leftrightarrow$Germ
 %In general, $1k$ is a option for sentence batch size. The embedding mappings from English to German and from German to English show close results.
 %However the second Empirically, we find the best sentence batch size is 1k and initial lrscheduler inheriting last lr works not as well as the first one. We augment training data by training 2 epochs and extending the corpus to 200k sentences. The results are in Table 6.7, the sentence batch size is $1k$ and initial lr are set to $0.0001$, the best settings empirically.\\
 %	\end{itemize}
-In general, the results for mappings from English to German and from German to English are near, this is as we expected. Without LM the corpus-based approach can still learn a mapping, while the accuracy increases very slowly and converges to a level much lower than the normal one. The second lr scheduler learns very slow at the beginning and then tends to a good point, it seems that it keeps learning.  
+As demonstrated in Table 6.3, the retrieval accuracy of supervised learning is the highest among the results, with iterative refinements the performance of adversarial training proposed by \cite{DBLP:journals/corr/abs-1710-04087} is very close to supervised case. \\
+Our corpus-based approach works well, though there is 4\% distance to supervised training. It surpasses the approach using adversarial training only. The first lr scheduler always performs better than the second one, and results for mappings from English to German and from German to English are near, this is what we have expected.  Without LM the corpus-based approach can still learn a mapping, but finally results much worse than that integrating LM.\\
+
+\begin{figure}[h]
+	\includegraphics[width=10cm]{corpus}
+	\centering
+	\caption{Comparison of different experimental settings}
+\end{figure}
+We plot how retrieval accuracy varies w.r.t the number of training batches in Figure 6.1. The overlapping curves are from corpus-based approach with the first lr sheduler.  Without LM, the green curve increases slowly and converges finally under the normal approach. The curve for the second scheduler increases most slowly at the beginning, and rise obviously after a half of training batches. Since it still keeps increasing, we augment the training data by training for two epochs and extend the corpus size to 200k. The results are shown in Table 6.4.\\
 
 \begin{table}[h]
 	\centering
 	\begin{tabular}{lc}
 		\hline
-		Corpus & Accuracy (\%) \\ \hline
+		Corpus & \textsc{Accuracy} [\%] \\ \hline
 		50k    & 51.50         \\ \hline
 		50k $\times$2  & 55.51         \\ \hline
 		200k   & 57.87         \\ \hline
 	\end{tabular}
-	\caption{Word retrieval accuracy on different training corpus}
+	\caption{Word retrieval accuracy with different training corpora}
 \end{table}
-\begin{figure}[h]
-	\includegraphics[width=10cm]{corpus}
-	\centering
-	\caption{Comparison of different experiments}
-\end{figure}
+The performance of the second scheduler gets improved when enlarging training data, but is still not so good as the first scheduler.  
 
 
 \section{Sentence Translation}
@@ -112,7 +116,7 @@ In general, the results for mappings from English to German and from German to E
 	\caption{Translation results on German$\leftrightarrow$English \texttt{newstest2016} and French$\leftrightarrow$English \texttt{newstest2014}}
 
 \end{table}
-As demonstrated in Table LM improves wordby-word
+As demonstrated in Table 6.5, LM improves wordby-word
 baselines consistently in all four tasks, giving at least +3\% BLEU. When our denoising
 model is applied on top of it, we have additional
 gain around +3\% BLEU. Note that our methods
@@ -125,7 +129,7 @@ repetitive back-translations by up to +3.9\% BLEU.
 
 	\begin{table}[!h]
 	\centering
-	\caption {Word-by-word translation from German to English}
+	
 	\begin{tabular}{ccc}
 		\hline
 		&\textsc{Accuracy} [\%]& \textsc{Bleu} [\%] \\ \hline
@@ -134,6 +138,7 @@ repetitive back-translations by up to +3.9\% BLEU.
 		50M & 59.4 & 10.8 \\ \hline
 		100M &\leavevmode\color{blue}61.2 & \leavevmode\color{blue}11.2 \\ \hline
 	\end{tabular}
+\caption {Word-by-word translation from German to English}
 \end{table}
 As in Table 6.9, larger corpus improves the word translation accuracy as well as the word-by-word translation. 
 
@@ -164,7 +169,7 @@ Byte pair encoding (BPE)(\cite{sennrich2015neural}) is a simple data compression
 		\end{tabular}
 	
 	}\\
-	\caption{Different embedding units and vocabulary size}
+	\caption{Translation results with different vocabularies.}
 \end{table}
 
 
@@ -180,33 +185,34 @@ cross-lingual mapping. Surprisingly, cross-lingual word embedding learned only o
 	\begin{table}[H]
 
 	\centering
-	\scalebox{1}{
-		\begin{tabular}{cccrc}
-			\toprule
-			$d_\text{per}$ & $p_\text{del}$ & $p_\text{ins}$ & $V_\text{ins}$ & \textsc{Bleu} [\%] \\
-			\midrule
-			2 & & & & 14.7\\
-			3 & & & & \leavevmode\color{blue}{14.9}\\
-			5 & & & & 14.9\\
-			\midrule
-			\multirow{2}{*}{3} & 0.1 & &  & \leavevmode\color{blue}{15.7} \\
-			& 0.3 & & & 15.1 \\
-			\midrule
-			\multirow{4}{*}{3} & \multirow{4}{*}{0.1} & \multirow{4}{*}{0.1} & 10 & 16.8 \\
-			& & & 50 & \leavevmode\color{blue}{17.2} \\
-			& & & 500 & 16.8 \\
-			& & & 5000 & 16.5\\
-			\bottomrule
-		\end{tabular}
-	}
+			\scalebox{1}{
+	\begin{tabular}{cccrc}
+		\toprule
+		$d_\text{per}$ & $p_\text{del}$ & $p_\text{ins}$ & $V_\text{ins}$ & \textsc{Bleu} [\%] \\
+		\midrule
+		2 & & & & 14.7\\
+		3 & & & & \leavevmode\color{blue}{14.9}\\
+		5 & & & & 14.9\\
+		\midrule
+		\multirow{2}{*}{3} & 0.1 & &  & \leavevmode\color{blue}{15.7} \\
+		& 0.3 & & & 15.1 \\
+		\midrule
+		\multirow{4}{*}{3} & \multirow{4}{*}{0.1} & \multirow{4}{*}{0.1} & 10 & 16.8 \\
+		& & & 50 & \leavevmode\color{blue}{17.2} \\
+		& & & 500 & 16.8 \\
+		& & & 5000 & 16.5\\
+		\bottomrule
+	\end{tabular}
+}
 
 	\label{tab:denoising}
-		\caption{Different artificial noises}
+		\caption{ Translation results with different values of denoising
+			parameters.}
 \end{table}
 To examine the effect of each noise type in denoising
 autoencoder, we tuned each parameter of the noise and combined them incrementally as in Table 6.8.  Firstly, for permutations, a significant improvement is achieved from $d_{per}$ = 3, since a local
 reordering usually involves a sequence of 3 to 4
-words. With $d_{per} le 5$ , it shuffles too many consecutive
+words. With $d_{per} \le 5$ , it shuffles too many consecutive
 words together, yielding no further improvement.
 This noise cannot handle long-range reordering, which is usually a swap of words that are far from each other, keeping the words in the
 middle as they are. \\
@@ -219,7 +225,7 @@ is generally not beneficial, since it provides too
 much variations in the inserted word, which might
 not be related to its neighboring words. Overall,
 we observe the best result (+1.5\% BLEU) with
-$V_{max} = 50$.
+$V_{ins} = 50$.
 
 
 
@@ -238,10 +244,11 @@ $V_{max} = 50$.
 		&                            & 2000 & 10.7 & 14.0  &16.5 \\ \hline
 		Top frequent              & \multicolumn{1}{l}{\text{count}}  & 50k  & \leavevmode\color{blue}12.0 & \leavevmode\color{blue}15.7  & 16.8 \\ \hline
 	\end{tabular}
-	\caption{Performance of phrase embedding in MT}
+	\caption{Performance of phrase embedding in MT.}
 \end{table}
-With word2vec tool (\cite{mikolov2013distributed}) we detect phrases in the training corpus. We set threshold value to 100, 500, 2000 to make the number of phrases differs. Fewer phrases will be detected as we lift the threshold value. As to our method, we extract only bigrams that in the top 50k frequent bigrams in the training corpus. We learn phrase embedding in an unsupervised manner as normal word embedding. \\
-As demonstrates in Table
+%With word2vec tool (\cite{mikolov2013distributed}) we detect phrases in the training corpus. We set threshold value to 100, 500, 2000 to make the number of phrases differs. Fewer phrases will be detected as we lift the threshold value. As to our method, we extract only bigrams that in the top 50k frequent bigrams in the training corpus. We learn phrase embedding in an unsupervised manner as normal word embedding. \\
+%As demonstrates in Table
+We examine how phrase embedding performs in MT. Phrase embedding using detection technique proposed by \cite{mikolov2013distributed} works better if we lift up the threshold value. The performance of MT gets harmed when too many phrases. And the results is even worse than word embedding.  While with our phrase detection method, BLEU of MT results is higher when using word-by-word translation and integrating LM. The final results are denoising step is not as good as word embedding. 
 %?????? not sure if I need to add this corresponding part in unsupervised cross-lingual embedding
 
 
